--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -732,6 +732,167 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression, Ridge, Lasso, ElasticNet\n",
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(true, predicted):\n",
+    "    mse = mean_squared_error(true, predicted)\n",
+    "    mae = mean_absolute_error(true, predicted)\n",
+    "    rmse = np.sqrt(mse)\n",
+    "    r2 = r2_score(true, predicted)\n",
+    "    adjusted_r2 = (1-(1-r2)*(len(y)-1)) / ((len(y)-X.shape[1]-1))\n",
+    "    return (mse, mae, rmse, r2, adjusted_r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linear_regression\n",
+      "Coefficients: [[ 6432.97591819  -132.34206204   -70.48787525 -1701.38593925\n",
+      "   -494.17005097   -76.32351645    68.80035873   464.67990411\n",
+      "    652.10059539]]\n",
+      "intercept: [3976.8787389]\n",
+      "Model Training Performance\n",
+      "MSE: 1029473.3531156846\n",
+      "MAE: 675.0758270067483\n",
+      "RMSE: 1014.6296630375463\n",
+      "R2 Score: 93.62906819996049\n",
+      "Adjusted R2 Score: -6.370711398341877\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "ridge\n",
+      "Coefficients: [[ 6431.38617847  -132.24135508   -70.51248113 -1695.12808528\n",
+      "   -498.30784705   -76.87489702    68.78291676   464.63992819\n",
+      "    652.13839206]]\n",
+      "intercept: [3976.8787389]\n",
+      "Model Training Performance\n",
+      "MSE: 1029482.810126896\n",
+      "MAE: 675.1077629781366\n",
+      "RMSE: 1014.6343233534415\n",
+      "R2 Score: 93.6290096749163\n",
+      "Adjusted R2 Score: -6.370769926107264\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "lasso\n",
+      "Coefficients: [ 6388.83205065  -129.94146246   -66.55952582 -1999.8773794\n",
+      "  -172.61296695   -56.60669455    70.61820516   462.50115691\n",
+      "   651.57490075]\n",
+      "intercept: [3976.8787389]\n",
+      "Model Training Performance\n",
+      "MSE: 1029533.150650549\n",
+      "MAE: 676.2421173665509\n",
+      "RMSE: 1014.6591302750638\n",
+      "R2 Score: 93.62869814082755\n",
+      "Adjusted R2 Score: -6.371081474681266\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "elasticnet\n",
+      "Coefficients: [1145.50108778  -16.41003013   10.34971882  776.7235838   777.12956928\n",
+      "  742.70114615   60.38943747   86.65314285  340.48427858]\n",
+      "intercept: [3976.8787389]\n",
+      "Model Training Performance\n",
+      "MSE: 2351174.8713978743\n",
+      "MAE: 1060.9432977143008\n",
+      "RMSE: 1533.3541245902313\n",
+      "R2 Score: 85.44967219374031\n",
+      "Adjusted R2 Score: -14.550487717762694\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_dict = {\n",
+    "    'linear_regression' : LinearRegression(),\n",
+    "    'ridge' : Ridge(),\n",
+    "    'lasso' : Lasso(),\n",
+    "    'elasticnet' : ElasticNet()\n",
+    "}\n",
+    "model_names = list(model_dict.keys())\n",
+    "models = list(model_dict.values())\n",
+    "r2_list = []\n",
+    "for i in range(len(models)):\n",
+    "    model = models[i]\n",
+    "    model.fit(X_train, y_train)\n",
+    "\n",
+    "    print(model_names[i])\n",
+    "    print('Coefficients:', model.coef_)\n",
+    "    print('intercept:',model.intercept_)\n",
+    "\n",
+    "    mse, mae, rmse, r2, adjusted_r2 = evaluate_model(y_test, model.predict(X_test))\n",
+    "    r2_list.append(r2)\n",
+    "    print('Model Training Performance')\n",
+    "    print('MSE:', mse)\n",
+    "    print('MAE:', mae)\n",
+    "    print('RMSE:', rmse)\n",
+    "    print('R2 Score:', r2*100)\n",
+    "    print('Adjusted R2 Score:',adjusted_r2*100)\n",
+    "\n",
+    "    print('='*35)\n",
+    "    print('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['linear_regression', 'ridge', 'lasso', 'elasticnet']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Model: linear_regression\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_score = max(r2_list)\n",
+    "print('Best Model:', model_names[r2_list.index(best_score)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
