Model Trainer notebook updated

--- a/notebooks/Model Training.ipynb
+++ b/notebooks/Model Training.ipynb
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -751,13 +751,13 @@
     "    mae = mean_absolute_error(true, predicted)\n",
     "    rmse = np.sqrt(mse)\n",
     "    r2 = r2_score(true, predicted)\n",
-    "    adjusted_r2 = (1-(1-r2)*(len(y)-1)) / ((len(y)-X.shape[1]-1))\n",
+    "    adjusted_r2 = 1-(((1-r2)*(len(y)-1)) / ((len(y)-X.shape[1]-1)))\n",
     "    return (mse, mae, rmse, r2, adjusted_r2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
       "MAE: 675.0758270067483\n",
       "RMSE: 1014.6296630375463\n",
       "R2 Score: 93.62906819996049\n",
-      "Adjusted R2 Score: -6.370711398341877\n",
+      "Adjusted R2 Score: 93.62877197399683\n",
       "===================================\n",
       "\n",
       "\n",
@@ -788,7 +788,7 @@
       "MAE: 675.1077629781366\n",
       "RMSE: 1014.6343233534415\n",
       "R2 Score: 93.6290096749163\n",
-      "Adjusted R2 Score: -6.370769926107264\n",
+      "Adjusted R2 Score: 93.62871344623146\n",
       "===================================\n",
       "\n",
       "\n",
@@ -802,7 +802,7 @@
       "MAE: 676.2421173665509\n",
       "RMSE: 1014.6591302750638\n",
       "R2 Score: 93.62869814082755\n",
-      "Adjusted R2 Score: -6.371081474681266\n",
+      "Adjusted R2 Score: 93.62840189765745\n",
       "===================================\n",
       "\n",
       "\n",
@@ -815,7 +815,7 @@
       "MAE: 1060.9432977143008\n",
       "RMSE: 1533.3541245902313\n",
       "R2 Score: 85.44967219374031\n",
-      "Adjusted R2 Score: -14.550487717762694\n",
+      "Adjusted R2 Score: 85.44899565457604\n",
       "===================================\n",
       "\n",
       "\n"
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "['linear_regression', 'ridge', 'lasso', 'elasticnet']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
